refactor(all): 입력값이 숫자 판별하는 로직 리팩토링
* LottoOwner, BonusNumber, LottoTicket에서 생성자에 숫자를 받도록 변경, 테스트도 맞게 변경
* LottoGameController: 입력값이 숫자인지 검사하는 로직 추가
* WinningNumber: 생성자에서 String이 아니라 Lotto, BonusNumber 자체를 받도록 변경